# projeto_crud

./: banco_ecommerce.db  connection.py  models.py  pyproject.toml
