[tool.poetry]
name = "projeto-crud"
version = "0.1.0"
description = "Projeto de CRUD com FastAPI"
authors = ["Guilherme Canfield <guilherme.canfield87@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
